# test

./: .gitignore  README  README.md  SETUP.md  index.html  main.js  package-lock.json  package.json  pyproject.toml
Drone Wars 2026/: AGENTS.md  README.md  events.js  index.html  main.js  strategic_cards.js  style.css
Drone Wars 2026/techtree/: researchtree.css  researchtree.html  researchtree.js  techtree.md
gameloop_dronewars/: AGENTS.md  README.md  index.html  main.js  strategic_cards.js  style.css
src/testapp/: __init__.py
tests/: test_app.py
warp/: README.md  index.html  main.js  package.json  styles.css
