[tool.poetry]
name = "test"
version = "0.1.0"
description = "First file"
authors = ["Codex <codex@openai.com>"]
readme = "README"

packages = [{ include = "testapp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
